get sticker full info
