# app/Http/Controllers/StickerController.php
@@ -19,6 +19,36 @@ class StickerController extends GenericController implements StickerInterface
      */
     protected $model = Sticker::class;
 
+
+    /**
+     * Return all the data of the stickers with every info
+     * @return JsonResponse
+     */
+    public function indexDetails(): JsonResponse
+    {
+        $stickers = $this->model::with('image')->with('categories')->paginate(10);
+        return response()->json(['data' => $stickers], 200);
+    }
+
+    /**
+     * Retrieve a specific sticker with all the data.
+     *
+     * @param mixed $id
+     * @return JsonResponse
+     */
+    public function showDetails(mixed $id): JsonResponse
+    {
+        $sticker = $this->model::with('image')->with('categories')->find($id);
+
+        if (!$sticker) {
+            // Return a JSON response with a 404 (Not Found) status if the item is not found.
+            return response()->json(['message' => 'Item not found'], 404);
+        }
+
+        // Return a JSON response with the found item.
+        return response()->json($sticker, 200);
+    }
+
     /**
      * Get validation rules for the specific model.
      *
@@ -66,8 +96,9 @@ class StickerController extends GenericController implements StickerInterface
 
 
     /**
-     * get the stickers with a certain categoryId.
+     * Attach a category to a sticker.
      *
+     * @param Request $request
      * @param int $stickerId
      * @return JsonResponse
      */
@@ -96,8 +127,9 @@ class StickerController extends GenericController implements StickerInterface
 
 
     /**
-     * get the stickers with a certain categoryId.
+     * detach a category from a sticker.
      *
+     * @param Request $request
      * @param int $stickerId
      * @return JsonResponse
      */
